--- a/lib/components/Operation/operation.html
+++ b/lib/components/Operation/operation.html
@@ -2,6 +2,7 @@
   <div class="operation-content">
     <h2 class="operation-header sharable-header">
         <a class="share-link" href="#{{operation.anchor}}"></a>{{operation.summary}}
+        <auth-scopes pointer="{{pointer}}/security"> </auth-scopes>
     </h2>
     <endpoint-link *ngIf="pathInMiddlePanel"
       [verb]="operation.verb" [path]="operation.path"> </endpoint-link>
