Add special rendering for deprecated operations

--- a/lib/components/Operation/operation.scss
+++ b/lib/components/Operation/operation.scss
@@ -18,6 +18,10 @@
   margin-bottom: calc(1em - 6px);
 }
 
+.operation-deprecated {
+  font-weight: bold;
+}
+
 .operation-tags {
   margin-top: 20px;
 
