--- a/lib/components/Operation/operation.html
+++ b/lib/components/Operation/operation.html
@@ -5,6 +5,9 @@
     </h2>
     <endpoint-link *ngIf="pathInMiddlePanel"
       [verb]="operation.verb" [path]="operation.path"> </endpoint-link>
+    <div class="operation-deprecated" *ngIf="operation.deprecated">
+        Warning: Deprecated
+    </div>
     <div class="operation-tags" *ngIf="operation.info.tags.length">
         <a *ngFor="let tag of operation.info.tags" attr.href="#tag/{{tag}}"> {{tag}} </a>
     </div>
