--- a/lib/components/RequestSamples/request-samples.html
+++ b/lib/components/RequestSamples/request-samples.html
@@ -1,8 +1,8 @@
 <header *ngIf="schemaPointer || samples.length"> Request samples </header>
-<schema-sample *ngIf="schemaPointer && !samples.length" [skipReadOnly]="true" [pointer]="schemaPointer"> </schema-sample>
+<schema-sample *ngIf="schemaPointer && !samples.length" [skipReadOnly]="true" [pointer]="schemaPointer" [isRequestSample]="true"> </schema-sample>
 <tabs *ngIf="samples.length" [selected] = "selectedLang" (change)=changeLangNotify($event)>
   <tab *ngIf="schemaPointer" tabTitle="JSON">
-    <schema-sample [pointer]="schemaPointer" [skipReadOnly]="true"> </schema-sample>
+    <schema-sample [pointer]="schemaPointer" [skipReadOnly]="true" [isRequestSample]="true"> </schema-sample>
   </tab>
   <tab *ngFor="let sample of samples" [tabTitle]="sample.lang">
     <div class="code-sample">
