--- a/lib/components/SchemaSample/schema-sample.html
+++ b/lib/components/SchemaSample/schema-sample.html
@@ -11,7 +11,7 @@
   </div>
 </ng-template>
 
-<tabs *ngIf="xmlSample; else jsonSnippet">
+<tabs *ngIf="xmlSample || textSample; else jsonSnippet">
   <tab tabTitle="JSON" *ngIf="sample">
     <ng-container *ngTemplateOutlet="jsonSnippet"></ng-container>
   </tab>
@@ -23,7 +23,7 @@
       <pre class="response-sample" [innerHtml]="xmlSample | prism:'xml'"></pre>
     </div>
   </tab>
-  <tab tabTitle="text/plain" *ngIf="textSample">
+  <tab tabTitle="{{textSampleType}}" *ngIf="textSample">
     <div class="snippet">
       <div class="action-buttons">
         <span copy-button [copyText]="xmlSample" class="hint--top-left hint--inversed"> <a>Copy</a> </span>
