Add some CSS styling to the index.html template

--- a/cli/template.hbs
+++ b/cli/template.hbs
@@ -11,6 +11,11 @@
       padding: 0;
       margin: 0;
     }
+    label[role=menuitem][type=group] {
+      color: orange;
+      font-weight: bolder;
+      font-size: 120%;
+    }
   </style>
   {{{redocHead}}}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
