--- a/cli/template.hbs
+++ b/cli/template.hbs
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE html>	
 <html>
 
-<head>
-  <meta charset="utf8" />
-  <title>{{title}}</title>
-  <!-- needed for adaptive design -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-  {{{redocHead}}}
-  {{#unless disableGoogleFont}}<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">{{/unless}}
-  <link href="https://www.mongodb.com/docs/assets/favicon.ico" rel="icon">
-</head>
+  <head>
+    <meta charset='utf8' />
+    <title>{{title}}</title>
+    <!-- needed for adaptive design -->
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
+    <style>
+      body { padding: 0; margin: 0; }
+    </style>
+    {{{redocHead}}}
+    {{#unless disableGoogleFont}}<link
+        href='https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700'
+        rel='stylesheet'
+      />{{/unless}}
+    <link href='https://www.mongodb.com/docs/assets/favicon.ico' rel='icon' />
+    <script>!function(e,n){var
+      t=document.createElement("script"),o=null,x="pathway";t.async=!0,t.src='https://'+x+'.mongodb.com/'+(e?x+'-debug.js':''),document.head.append(t),t.addEventListener("load",function(){o=window.pathway.default,(n&&o.configure(n)),o.createProfile("mongodbcom").load(),window.segment=o})}();</script>
 
-<body>
-  {{{redocHTML}}}
-</body>
+  </head>
+
+  <body>
+    {{{redocHTML}}}
+  </body>
 
 </html>
